<resources>
    <string name="app_name" translatable="false">Kolokvijum</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="missing_login_data_error">The data in this field is mandatory</string>
    <string name="login">Login</string>
    <string name="calendar">Calendar</string>
    <string name="daily_plan">Daily plan</string>
    <string name="profile">Profile</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thurstday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="high">High</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="show_past_obligations">Show past obligations</string>
    <string name="create">Create</string>
    <string name="cancle">Cancel</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="desc">Description</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="change_pw">Change password</string>
    <string name="logout">Logout</string>
    <string name="new_pw">New password:</string>
    <string name="change_of_pw_canceled">Canceled password change</string>
    <string name="change_of_pw_success">Password changed</string>
    <string name="change_of_pw_error">Passwords aren\'t matching</string>
    <string name="email_format_error">Email is not in the right format</string>
    <string name="password_tooltip">Passowrd must contain a capital letter, a number and it can\'t contain (~#^|$%&amp;*!) </string>
    <string name="login_success">Login successful</string>
    <string name="credentials_valid_error">Credencials are not valid</string>
    <string name="new_pass_cant_be_same_as_last">New passwrod can\'t be same as last password</string>
    <string name="logut_successful">Logout successful</string>
    <string name="delete_confirm">Are you sure you want to delete this errand</string>
    <string name="confirm_deletion"> yes </string>
    <string name="not_confirm_deletion"> no </string>
    <string name="back">Back</string>
    <string name="title_missing_error">Title is mandatory</string>



</resources>