<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/DetailConstrainLayout"
    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/detailDateTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        />


    <TextView
        android:id="@+id/detailTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30dp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/detailTimeTv"
        />


    <TextView
        android:id="@+id/detailTimeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:text="@string/time"
        app:layout_constraintTop_toBottomOf="@id/detailDateTv"
        />



    <TextView
        android:id="@+id/detailDescTv"
        android:layout_width="match_parent"
        android:text="@string/desc"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/detailTitleTv"
        app:layout_constraintBottom_toTopOf="@id/detailDeleteBtn"
        />



    <Button
        android:id="@+id/detailBackBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detailEditBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/detailEditBtn"
        android:layout_width="0dp"
        android:text="@string/edit"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detailDeleteBtn"
        app:layout_constraintLeft_toRightOf="@id/detailBackBtn"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/detailDeleteBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/detailEditBtn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>