<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/monthTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/mondayTv"
        android:text="@string/monday"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/monthTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tuesdayTv"
        
        />

    <TextView
        android:id="@+id/tuesdayTv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        
        android:text="@string/tuesday"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/mondayTv"
        app:layout_constraintEnd_toStartOf="@id/wednesdayTv"
        app:layout_constraintTop_toBottomOf="@id/monthTv" />
    <TextView
        android:id="@+id/wednesdayTv"
        android:text="@string/wednesday"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/monthTv"
        app:layout_constraintStart_toEndOf="@id/tuesdayTv"
        app:layout_constraintEnd_toStartOf="@id/thurstdayTv"
        
        />
    <TextView
        android:id="@+id/thurstdayTv"
        android:text="@string/thurstday"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/monthTv"
        app:layout_constraintStart_toEndOf="@id/wednesdayTv"
        app:layout_constraintEnd_toStartOf="@id/fridayTv"
        />
    <TextView
        android:id="@+id/fridayTv"
        android:text="@string/friday"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/monthTv"
        app:layout_constraintStart_toEndOf="@id/thurstdayTv"
        app:layout_constraintEnd_toStartOf="@id/saturdayTv"
        
        />
    <TextView
        android:id="@+id/saturdayTv"
        android:text="@string/saturday"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/sundayTv"
        app:layout_constraintTop_toBottomOf="@id/monthTv"
        app:layout_constraintStart_toEndOf="@id/fridayTv"
        
        />

    <TextView
        android:id="@+id/sundayTv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        
        android:text="@string/sunday"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saturdayTv"
        app:layout_constraintTop_toBottomOf="@id/monthTv" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weekRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mondayTv"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>