<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/addDateTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/addLowTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/low"
        app:layout_constraintTop_toBottomOf="@id/addDateTv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/addMidTv"
        />
    <TextView
        android:id="@+id/addMidTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/mid"
        app:layout_constraintTop_toBottomOf="@id/addDateTv"
        app:layout_constraintLeft_toRightOf="@id/addLowTv"
        app:layout_constraintRight_toLeftOf="@id/addHightTv"
        />
    <TextView
        android:id="@+id/addHightTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/high"
        app:layout_constraintTop_toBottomOf="@id/addDateTv"
        app:layout_constraintLeft_toRightOf="@id/addMidTv"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/addTitleLableTv"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/addLowTv"
        />
    <EditText
        android:id="@+id/addTitleEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/addTitleLableTv"
        />

    <TextView
        android:id="@+id/addTimeStartLableTv"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/time"
        app:layout_constraintTop_toBottomOf="@id/addTitleEdt"
        />


    <TimePicker
        android:id="@+id/addStartTimeTp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/addTimeStartLableTv"
        app:layout_constraintRight_toLeftOf="@id/addEndTimeTp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp" />
    <TimePicker
        android:id="@+id/addEndTimeTp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/addStartTimeTp"
        app:layout_constraintTop_toBottomOf="@id/addTimeStartLableTv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/addDescLableTv"
        android:layout_width="match_parent"
        android:text="@string/desc"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/addStartTimeTp"
        />
    <EditText
        android:id="@+id/addDescEdt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/addDescLableTv"
        app:layout_constraintBottom_toTopOf="@id/createBtn"
        />


    <Button
        android:id="@+id/createBtn"
        android:layout_width="0dp"
        android:text="@string/create"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/addCancleBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/addCancleBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/cancle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/createBtn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>