<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/editDateTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/editLowTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/low"
        app:layout_constraintTop_toBottomOf="@id/editDateTv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editMidTv"
        />
    <TextView
        android:id="@+id/editMidTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/mid"
        app:layout_constraintTop_toBottomOf="@id/editDateTv"
        app:layout_constraintLeft_toRightOf="@id/editLowTv"
        app:layout_constraintRight_toLeftOf="@id/editHightTv"
        />
    <TextView
        android:id="@+id/editHightTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/high"
        app:layout_constraintTop_toBottomOf="@id/editDateTv"
        app:layout_constraintLeft_toRightOf="@id/editMidTv"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/editTitleLableTv"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/editLowTv"
        />
    <EditText
        android:id="@+id/editTitleEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/editTitleLableTv"
        />

    <TextView
        android:id="@+id/editTimeStartLableTv"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/time"
        app:layout_constraintTop_toBottomOf="@id/editTitleEdt"
        />


    <TimePicker
        android:id="@+id/editStartTimeTp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/editTimeStartLableTv"
        app:layout_constraintRight_toLeftOf="@id/editEndTimeTp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp" />
    <TimePicker
        android:id="@+id/editEndTimeTp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/editStartTimeTp"
        app:layout_constraintTop_toBottomOf="@id/editTimeStartLableTv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/editDescLableTv"
        android:layout_width="match_parent"
        android:text="@string/desc"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/editStartTimeTp"
        />
    <EditText
        android:id="@+id/editDescEdt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/editDescLableTv"
        app:layout_constraintBottom_toTopOf="@id/saveBtn"
        />


    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:text="@string/save"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editCancleBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/editCancleBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/cancle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/saveBtn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>