<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="left"
        android:layout_marginLeft="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/email" />
    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:lines="1"/>
    <TextView
        android:id="@+id/emailErrorText"
        android:visibility="gone"
        android:textSize="10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/missing_login_data_error" />


    <TextView
        android:layout_gravity="left"
        android:layout_marginLeft="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/username" />
    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:lines="1"/>
    <TextView
        android:id="@+id/usernameErrorText"
        android:visibility="gone"
        android:textSize="10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/missing_login_data_error" />


    <TextView
        android:layout_gravity="left"
        android:layout_marginLeft="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password" />
    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:lines="1"/>
    <TextView
        android:id="@+id/passwordErrorText"
        android:visibility="gone"
        android:textSize="10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/missing_login_data_error" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/login"/>

</LinearLayout>