<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dailyPlanLayout"
    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/pastObligations"
        android:text="@string/show_past_obligations"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/dateTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/teal_700"
        app:layout_constraintRight_toLeftOf="@id/checkbox"
        />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/teal_700"
        android:checked="true"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/dateTv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/pastObligations"/>

    <EditText
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/pastObligations"
        />

    <TextView
        android:id="@+id/lowPriority"
        android:text="@string/low"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/green"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/midPriority"

        />

    <TextView
        android:id="@+id/midPriority"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/yellow"
        android:text="@string/mid"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/lowPriority"
        app:layout_constraintEnd_toStartOf="@id/highPriority"
        app:layout_constraintTop_toBottomOf="@id/filter" />
    <TextView
        android:id="@+id/highPriority"
        android:text="@string/high"
        android:layout_width="0dp"
        android:background="@color/red"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/filter"
        app:layout_constraintStart_toEndOf="@id/midPriority"
        app:layout_constraintEnd_toEndOf="parent"

        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/errandRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lowPriority"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-107dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        app:fabCustomSize="60dp"
        app:maxImageSize="45dp"
        android:src="@drawable/plus_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>